Prepare backend for Render deployment